update-done: ignore nanosecond file timestamp components, they are not reliable

https://bugs.freedesktop.org/show_bug.cgi?id=90192